@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020191110"
-#define public MagickPackageReleaseDate "snapshot-20191110"
+#define public MagickPackageVersionAddendum ".020191116"
+#define public MagickPackageReleaseDate "snapshot-20191116"
